--- a/many/docker-compose.yml
+++ b/many/docker-compose.yml
@@ -448,6 +448,7 @@ services:
       - run
       - proxy
     environment:
+      - BIND_PORT=${MILVUS_PROXY_PORT}
       - ETCD_ENDPOINTS=${NGINX_TWO_HOST}:${GATEWAY_ETCD_CLIENT_PORT}
       - MINIO_ADDRESS=${NGINX_TWO_HOST}:${GATEWAY_MINIO_NODE_PORT}
       - MINIO_ACCESS_KEY_ID=${GATEWAY_MINIO_ROOT_USER}
