--- a/many/nginx/two/template.nginx.conf
+++ b/many/nginx/two/template.nginx.conf
@@ -12,22 +12,16 @@ stream {
         server ${REDIS_THREE_HOST}:${REDIS_THREE_PORT};
     }
 
-    upstream cockroachdb_node {
+    upstream cockroach_node {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
         server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_NODE_PORT};
         server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_NODE_PORT};
     }
 
-    upstream cockroachdb_sql {
+    upstream cockroach_sql {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
         server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_SQL_PORT};
         server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_SQL_PORT};
-    }
-
-    upstream cockroachdb_http {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_HTTP_PORT};
     }
 
     upstream etcd_client {
@@ -42,12 +36,6 @@ stream {
         server ${MINIO_THREE_HOST}:${MINIO_THREE_NODE_PORT};
     }
 
-    upstream minio_console {
-        server ${MINIO_ONE_HOST}:${MINIO_ONE_CONSOLE_PORT};
-        server ${MINIO_TWO_HOST}:${MINIO_TWO_CONSOLE_PORT};
-        server ${MINIO_THREE_HOST}:${MINIO_THREE_CONSOLE_PORT};
-    }
-
     server {
         listen ${GATEWAY_REDIS_PORT};
         proxy_pass redis;
@@ -55,17 +43,12 @@ stream {
 
     server {
         listen ${GATEWAY_COCKROACH_NODE_PORT};
-        proxy_pass cockroachdb_node;
+        proxy_pass cockroach_node;
     }
 
     server {
         listen ${GATEWAY_COCKROACH_SQL_PORT};
-        proxy_pass cockroachdb_sql;
-    }
-
-    server {
-        listen ${GATEWAY_COCKROACH_HTTP_PORT};
-        proxy_pass cockroachdb_http;
+        proxy_pass cockroach_sql;
     }
 
     server {
@@ -76,11 +59,6 @@ stream {
     server {
         listen ${GATEWAY_MINIO_NODE_PORT};
         proxy_pass minio_node;
-    }
-
-    server {
-        listen ${GATEWAY_MINIO_CONSOLE_PORT};
-        proxy_pass minio_console;
     }
 
 }
