--- a/one/docker-compose.yml
+++ b/one/docker-compose.yml
@@ -229,6 +229,7 @@ services:
       - run
       - standalone
     environment:
+      - BIND_PORT=${MILVUS_STANDALONE_PORT}
       - ETCD_ENDPOINTS=${NGINX_TWO_HOST}:${GATEWAY_ETCD_CLIENT_PORT}
       - MINIO_ADDRESS=${NGINX_TWO_HOST}:${GATEWAY_MINIO_NODE_PORT}
       - MINIO_ACCESS_KEY_ID=${GATEWAY_MINIO_ROOT_USER}
