--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -21,16 +21,16 @@ stream {
         server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
     }
 
-    upstream cockroachdb_sql {
+    upstream cockroach_sql {
         server ${NGINX_TWO_HOST}:${COCKROACH_ONE_SQL_PORT};
     }
 
-    upstream cockroachdb_http {
-        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_HTTP_PORT};
+    upstream cockroach_http {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
     }
 
     upstream milvus {
-        server ${NGINX_TWO_HOST}:${MILVUS_STANDALONE_PORT};
+        server ${MILVUS_STANDALONE_HOST}:${MILVUS_STANDALONE_PORT};
     }
 
     upstream milvus_attu {
@@ -42,7 +42,7 @@ stream {
     }
 
     upstream minio_console {
-        server ${NGINX_TWO_HOST}:${GATEWAY_MINIO_CONSOLE_PORT};
+        server ${MINIO_ONE_HOST}:${MINIO_ONE_CONSOLE_PORT};
     }
 
     upstream kafka {
@@ -50,8 +50,9 @@ stream {
     }
 
     upstream kafka_ui {
-        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_UI_PORT};
+        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
     }
+
 
 #     server {
 #         listen ${GATEWAY_FRONTEND_PORT};
@@ -75,12 +76,12 @@ stream {
 
     server {
         listen ${GATEWAY_COCKROACH_SQL_PORT};
-        proxy_pass cockroachdb_sql;
+        proxy_pass cockroach_sql;
     }
 
     server {
         listen ${GATEWAY_COCKROACH_HTTP_PORT};
-        proxy_pass cockroachdb_http;
+        proxy_pass cockroach_http;
     }
 
     server {
