--- a/one/nginx/two/template.nginx.conf
+++ b/one/nginx/two/template.nginx.conf
@@ -10,16 +10,12 @@ stream {
         server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
     }
 
-    upstream cockroachdb_node {
+    upstream cockroach_node {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
     }
 
-    upstream cockroachdb_sql {
+    upstream cockroach_sql {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
-    }
-
-    upstream cockroachdb_http {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
     }
 
     upstream etcd_client {
@@ -28,10 +24,6 @@ stream {
 
     upstream minio_node {
         server ${MINIO_ONE_HOST}:${MINIO_ONE_NODE_PORT};
-    }
-
-    upstream minio_console {
-        server ${MINIO_ONE_HOST}:${MINIO_ONE_CONSOLE_PORT};
     }
 
     upstream kafka {
@@ -45,17 +37,12 @@ stream {
 
     server {
         listen ${GATEWAY_COCKROACH_NODE_PORT};
-        proxy_pass cockroachdb_node;
+        proxy_pass cockroach_node;
     }
 
     server {
         listen ${GATEWAY_COCKROACH_SQL_PORT};
-        proxy_pass cockroachdb_sql;
-    }
-
-    server {
-        listen ${GATEWAY_COCKROACH_HTTP_PORT};
-        proxy_pass cockroachdb_http;
+        proxy_pass cockroach_sql;
     }
 
     server {
@@ -66,11 +53,6 @@ stream {
     server {
         listen ${GATEWAY_MINIO_NODE_PORT};
         proxy_pass minio_node;
-    }
-
-    server {
-        listen ${GATEWAY_MINIO_CONSOLE_PORT};
-        proxy_pass minio_console;
     }
 
     server {
