Add infinity embedding service.

--- a/many/.env
+++ b/many/.env
@@ -1,3 +1,7 @@
+APP_PATH=C:\Data\Apps\research-assistant-backend
+CACHE_PATH=C:\Data\Apps\research-assistant-infrastructure\data\cache
+NLTK_DATA_PATH=C:\Data\Apps\research-assistant-infrastructure\data\nltk_data
+
 GATEWAY_HOST=192.168.137.2
 
 GATEWAY_FRONTEND_PORT=80
@@ -29,6 +33,8 @@ GATEWAY_MINIO_ROOT_USER=user
 GATEWAY_MINIO_ROOT_PASSWORD=password
 
 GATEWAY_KAFKA_CLUSTER_ID=kafka-cluster-one
+
+GATEWAY_INFINTY_ONE_MODEL_NAME=intfloat/multilingual-e5-large-instruct
 
 NGINX_ONE_HOST=nginx-one
 NGINX_TWO_HOST=nginx-two
@@ -123,4 +129,9 @@ COCKROACH_THREE_HOST=cockroach-three
 COCKROACH_THREE_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
 COCKROACH_THREE_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
 COCKROACH_THREE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
+
+INFINITY_ONE_HOST=infinity-one
+INFINITY_ONE_PORT=${GATEWAY_INFINITY_ONE_PORT}
+INFINITY_ONE_MODEL_NAME=${GATEWAY_INFINTY_ONE_MODEL_NAME}
+
 
