--- a/many/nginx/one/template.nginx.conf
+++ b/many/nginx/one/template.nginx.conf
@@ -57,6 +57,10 @@ stream {
         server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
     }
 
+    upstream infinity_one {
+        server ${INFINITY_ONE_HOST}:${INFINITY_ONE_PORT};
+    }
+
 #     server {
 #         listen ${GATEWAY_FRONTEND_PORT};
 #         proxy_pass app;
@@ -115,6 +119,11 @@ stream {
     server {
         listen ${GATEWAY_KAFKA_UI_PORT};
         proxy_pass kafka_ui;
+    }
+
+    server {
+        listen ${GATEWAY_INFINITY_ONE_PORT};
+        proxy_pass infinity_one;
     }
 
 }
