--- a/one/.env
+++ b/one/.env
@@ -1,3 +1,7 @@
+APP_PATH=C:\Data\Apps\research-assistant-backend
+CACHE_PATH=C:\Data\Apps\research-assistant-infrastructure\data\cache
+NLTK_DATA_PATH=C:\Data\Apps\research-assistant-infrastructure\data\nltk_data
+
 GATEWAY_HOST=192.168.137.2
 
 GATEWAY_FRONTEND_PORT=80
@@ -15,6 +19,7 @@ GATEWAY_ETCD_CLIENT_PORT=2378
 GATEWAY_ETCD_PEER_PORT=2380
 GATEWAY_MINIO_NODE_PORT=9000
 GATEWAY_MINIO_CONSOLE_PORT=8084
+GATEWAY_INFINITY_ONE_PORT=7997
 
 GATEWAY_REDIS_PASSWORD=password
 
@@ -29,6 +34,8 @@ GATEWAY_MINIO_ROOT_USER=user
 GATEWAY_MINIO_ROOT_PASSWORD=password
 
 GATEWAY_KAFKA_CLUSTER_ID=kafka-cluster-one
+
+GATEWAY_INFINTY_ONE_MODEL_NAME=intfloat/multilingual-e5-large-instruct
 
 NGINX_ONE_HOST=nginx-one
 NGINX_TWO_HOST=nginx-two
@@ -66,6 +73,8 @@ GATEWAY_ETCD_INITIAL_CLUSTER_STATE=new
 #GATEWAY_ETCD_INITIAL_CLUSTER_STATE=existing
 GATEWAY_ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster-one
 
+GATEWAY_INFINITY_ONE_MODEL_NAME=intfloat/multilingual-e5-large-instruct
+
 MINIO_ONE_HOST=minio-one
 MINIO_ONE_NODE_PORT=${GATEWAY_MINIO_NODE_PORT}
 MINIO_ONE_CONSOLE_PORT=${GATEWAY_MINIO_CONSOLE_PORT}
@@ -77,3 +86,6 @@ COCKROACH_ONE_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
 COCKROACH_ONE_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
 COCKROACH_ONE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
 
+INFINITY_ONE_HOST=infinity-one
+INFINITY_ONE_PORT=${GATEWAY_INFINITY_ONE_PORT}
+INFINITY_ONE_MODEL_NAME=${GATEWAY_INFINITY_ONE_MODEL_NAME}
