--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -53,6 +53,10 @@ stream {
         server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
     }
 
+    upstream infinity_one {
+        server ${INFINITY_ONE_HOST}:${INFINITY_ONE_PORT};
+    }
+
 
 #     server {
 #         listen ${GATEWAY_FRONTEND_PORT};
@@ -112,6 +116,11 @@ stream {
     server {
         listen ${GATEWAY_KAFKA_UI_PORT};
         proxy_pass kafka_ui;
+    }
+
+    server {
+        listen ${GATEWAY_INFINITY_ONE_PORT};
+        proxy_pass infinity_one;
     }
 
 }
