Fix many deployment bugs.
- Still has milvus root cord state bug.

--- a/many/.env
+++ b/many/.env
@@ -19,6 +19,7 @@ GATEWAY_ETCD_CLIENT_PORT=2378
 GATEWAY_ETCD_PEER_PORT=2380
 GATEWAY_MINIO_NODE_PORT=9000
 GATEWAY_MINIO_CONSOLE_PORT=8084
+GATEWAY_INFINITY_ONE_PORT=7997
 
 GATEWAY_REDIS_PASSWORD=password
 
@@ -55,7 +56,7 @@ REDIS_THREE_HOST=redis-three
 REDIS_THREE_PORT=${GATEWAY_REDIS_PORT}
 REDIS_THREE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
 REDIS_INSIGHT_ONE_HOST=redis-insight-one
-REDIS_INSIGHT_ONE_PORT=${GATEWAY_REDIS_INSIGHT_PORT}
+REDIS_INSIGHT_ONE_PORT=5540
 
 MILVUS_PROXY_HOST=milvus-proxy
 MILVUS_PROXY_PORT=${GATEWAY_MILVUS_PORT}
