--- a/many/nginx/one/template.nginx.conf
+++ b/many/nginx/one/template.nginx.conf
@@ -26,9 +26,9 @@ stream {
     }
 
     upstream cockroach_http {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_PORT};
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
+        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
+        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_HTTP_PORT};
     }
 
     upstream milvus {
@@ -45,8 +45,8 @@ stream {
 
     upstream minio_console {
         server ${MINIO_ONE_HOST}:${MINIO_ONE_CONSOLE_PORT};
-        server ${MINIO_TWO_HOST}:${MINIO_CONSOLE_TWO_PORT};
-        server ${MINIO_THREE_HOST}:${MINIO_CONSOLE_THREE_PORT};
+        server ${MINIO_TWO_HOST}:${MINIO_TWO_CONSOLE_PORT};
+        server ${MINIO_THREE_HOST}:${MINIO_THREE_CONSOLE_PORT};
     }
 
     upstream kafka {
